# freckles

./: .bumpversion.cfg  .coveragerc  .dockerignore  .freckle  .freckles  .gitignore  .gitlab-ci.yml  .gitmodules  .isort.cfg  .mu_repo  .pre-commit-config.yaml  .python-dev.freckle  .travis.yml  ATTRIBUTION.md  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  DEPENDENCIES_LICENSE_NOTICES.md  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  ROADMAP.rst  TODO.rst  black-config.toml  docker.sh  docs_server.sh  example.js  example.py  freckles.1  inaugurate.freckles  init_submodules_for_dev.sh  profiling  pycharm_runner.py  pyproject.toml  requirements.txt  requirements_dev.txt  (+5 more)
.github/: ISSUE_TEMPLATE.md
attribution/: README.rst  third_party.html  third_party.md
contributing/: README.rst  dco_and_license.txt
docker/: Dockerfile  docker.sh
docs/: Makefile  advanced_usage.rst  bootstrap.rst  code.rst  code_overview.rst  commands.rst  conf.py  configuration.rst  configuration_management.rst  contributing.rst  conventions.rst  creating_freckelize_adapters.rst  creating_freckle_adapters.rst  developing_freckles_scripts.rst  development.rst  disable-community.rst  docs-server.sh  docs_server.sh  dotfiles.rst  enable-community.rst  examples.rst  faq.rst  freckelize_command.rst  freckfreckfreck_command.rst  frecklecutables.rst  frecklecutables_templating.rst  frecklecute.rst  frecklecute_command.rst  freckles.rst  freckles_command.rst  freckles_dev_config.rst  freckles_profile_dotfiles.rst  freckles_profile_python_dev.rst  freckles_profiles.rst  freckles_repos.rst  frecklet_evolution.md  frecklets.md  frecklets.rst  getting_started.md  getting_started.rst  (+19 more)
docs.bak/: Makefile  conf.py  index.rst  installation.rst  make.bat
examples/: create-folder  defaults.yml  freckles_args.yml  housekeeping.yml  install-docker  install-nginx  install-redis  install-spacemacs  mailpile  readthedocsforwarding  readthedocsforwarding.yml  script.yml  setup-python-dev.old  setup_example_script.yml  setup_example_script_short.yml  setup_sudo_user  setup_sudo_user_role  ubooquity  ubooquity_args.yml
freckles/: __init__.py  cli.py  commands.py  config.py  context.py  defaults.py  exceptions.py  freckelize.py  freckelize_cli.py  freckle_detect.py  frecklecutable.py  frecklecutable_new.py  frecklecute.py  frecklecute_cli.py  frecklecute_cli_old.py  freckles.prof  freckles.py  freckles_base_cli.py  freckles_cli.py  freckles_cli_old.py  freckles_commands_cli.py  freckles_context.py  freckles_defaults.py  freckles_dev_cli.py  freckles_doc.py  freckles_profile.py  freckles_runner.py  frecklet.py  frecklet_arg_helpers.py  frecklet_cli.py  output_callback.py  profile.py  profiles.py  repo_management.py  result_callback.py  schemas.py  tasks.py  test.profile  todo.org  utils.py
old/: doc_templating.py  freckles_adapter_nsbl.py
requirements/: docs.txt  requirements.txt  testing.txt
tests/: conftest.py  test_freckles.py  test_freckles_args.py
utils/: inaugurate.install-freckles  push_all_submodules.sh  pycharm_runner.py
(+220 files in other folders)
